layout.css
.heading{
	align: center;
    text-align: center;
    width: 90%;
	height: 20%;
	padding: 10px;
	margin-top: -220px;
    margin-left: 60px;
	color: white;
	font-size: 220%;
	-webkit-text-fill-color: white; /* Will override color (regardless of order) */
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #FFEBCD;
}

.pic{
	width: 300px;
	height: 200px;
	margin-top: 0px;
    margin-left: 0px;
}

.mini_map{
	width: 20px;
	height: 20px;
	border: 3px solid #73AD21;
    margin-left: 800px;
    margin-top: -50px;
    align: right;
}

body {
    line-height: 150%;
}

/* navigation ul */
.options{
	align: center;
	
	padding: 10px;
	width: 85%;
	height: 15%;
	margin-top: 0px;
    margin-left: 100px;
	background-color: black;
	font-family: Trebuchet MS, Helvetica, sans-serif;
	color: #FFEBCD;
	font-size: 120%;
}

.map{
	align: center;
	background-color: black;
	margin: auto;
    width: 85%;
  	height: 650px;
    margin-top: -140px;
    font-size: 120%;
    color: white;
}

.graph{
	align: center;
	background-color: black;
	margin: auto;
    width: 85%;
    padding: 10px;
    margin-top: 50px;
    font-size: 120%;
    color: white;
}

